correcting w3c errors,warnings

--- a/characters/characters.html
+++ b/characters/characters.html
@@ -276,26 +276,26 @@
             </ol>
             <div class="character-1-media d-flex justify-content-between">
               <div>
-                <video src="images/WITCH DOCTOR/witch-doctor-overview-en_US.mp4" controls
-                  poster="images/WITCH DOCTOR/witch_doctor_thumb.png" class="c2-video"></video>
+                <video src="images/WITCHDOCTOR/witch-doctor-overview-en_US.mp4" controls
+                  poster="images/WITCHDOCTOR/witch_doctor_thumb.png" class="c2-video"></video>
               </div>
               <div class="c1-power">
                 <div class="container text-center">
                   <div class="row">
                     <div class="col-6-2 col-sm-3">
-                      <img src="images/WITCH DOCTOR/x_1witchdoctor_fetisharmy.png" alt="barbarian armor">
+                      <img src="images/WITCHDOCTOR/x_1witchdoctor_fetisharmy.png" alt="barbarian armor">
                       <!-- Image of character's armor -->
                     </div>
                     <div class="col-6-2 col-sm-3">
-                      <img src="images/WITCH DOCTOR/-x2witchdoctor_acidcloud.png" alt="">
+                      <img src="images/WITCHDOCTOR/-x2witchdoctor_acidcloud.png" alt="">
                       <!-- Images of character's ability -->
                     </div>
                     <div class="w-100"></div>
                     <div class="col-6-2 col-sm-3">
-                      <img src="images/WITCH DOCTOR/x3_witchdoctor_massconfusion.png" alt="">
+                      <img src="images/WITCHDOCTOR/x3_witchdoctor_massconfusion.png" alt="">
                     </div>
                     <div class="col-6-2 col-sm-3">
-                      <img src="images/WITCH DOCTOR/x4_witchdoctor_gargantuan.png" alt="">
+                      <img src="images/WITCHDOCTOR/x4_witchdoctor_gargantuan.png" alt="">
                     </div>
                   </div>
                   <p class="skill-1">Skills</p>
@@ -304,7 +304,7 @@
             </div>
           </div>
           <div>
-            <img src="images/WITCH DOCTOR/witchdoctor.png" alt="barbarian" class="c2-img">
+            <img src="images/WITCHDOCTOR/witchdoctor.png" alt="barbarian" class="c2-img">
           </div>
         </div>
       </article>
