--- a/home.html
+++ b/home.html
@@ -60,7 +60,7 @@
         navigate treacherous dungeons, and unearth legendary loot. It's an unending clash of good versus evil.</p>
     </div>
     <div class="moto-image p-5 d-flex">
-      <img src="Images/Screenshot 2023-10-23 at 10.41.05 PM.png" alt="" class="moto-image1">
+      <img src="Images/motoimg.png" alt="" class="moto-image1">
     </div>
   </section>
   <!--Features icons-->
