--- a/gameplay/gameplay.html
+++ b/gameplay/gameplay.html
@@ -168,7 +168,7 @@
               nature fit this damage type. Several of the Wizard’s offensive skills deal Arcane damage.
             </li>
             <li> <b class="list-head">Holy:</b> On top of dealing damage, the offensive powers of holy magic employed in battle by Crusaders and
-              Monks can disrupt enemy behavior or providing defensive bonuses.</li>
+              Monks can disrupt enemy behavior or provide defensive bonuses.</li>
           </ol>
         </div>
       </div>
