reponsive design for story page

--- a/Story/story.html
+++ b/Story/story.html
@@ -43,9 +43,9 @@
     <!--Story Board-->
     <article class="story-boards">
       <!--Story Board 2-->
-      <div class="story-board d-flex justify-content-between">
+      <div class="story-board d-flex justify-content-center">
         <div class="storyboard-1">
-          <p>It Begins with....</p>
+          <h3>It Begins with....</h3>
           <p>The demons of the Burning Hells have long desired to invade the realm of men. To this end, a powerful group
             of demon lords known as the Lesser Evils exiled their brethren, the Prime Evils, from the Hells and sent
             them to the human world of Sanctuary.</p>
@@ -62,7 +62,7 @@
         </div>
       </div>
       <!--Story Board 2-->
-      <div class="story-board-2 d-flex justify-content-between pt-5">
+      <div class="story-board-2 d-flex justify-content-center pt-5">
         <div>
           <img src="images/story-so-far-2.png" alt="story-board-1-img" class="storyboard-2-img">
         </div>
