additional comments for all pages

--- a/Story/story.html
+++ b/Story/story.html
@@ -17,82 +17,107 @@
 </head>
 
 <body>
-  <!--Header-->
-  <header class="header m-2">
-    <article class="header-conatiner d-flex justify-content-between align-items-center">
-      <a href="../home.html"><img src="images/Diablo3Logo.png" alt="Diablo3Logo" class="h-img1"></a>
-      <h1 class="h-h1 fw-bold fs-1">Story</h1>
-      <a href="../characters/characters.html" style="text-decoration: none;"><p class="h-p1 fs-3">Characters</p></a>
-    </article>
-  </header>
-  <!--Story-->
-  <section class="story">
-    <!--Introduction-->
-    <article class="introductions pt-5 pb-5">
-      <div>
-        <h2>Diablo3</h2>
-        <p>Diablo III is an action role-playing game that takes place throughout the dark fantasy world of Sanctuary.
-          You play a hero who engages in fast-paced combat that tests your reflexes and rewards tactical decisions. As
-          you slay hordes of monsters and challenging bosses, you grow in experience and ability, learning new skills
-          and acquiring items of incredible power.</p>
-      </div>
-      <div class="d-flex justify-content-center pt-4">
-        <video controls src="video/what-is-diablo3-en_US.mp4" poster="images/tumbnail.jpeg" class="i-video"></video>
-      </div>
-    </article>
-    <!--Story Board-->
-    <article class="story-boards">
-      <!--Story Board 2-->
-      <div class="story-board d-flex justify-content-center">
-        <div class="storyboard-1">
-          <h3>It Begins with....</h3>
-          <p>The demons of the Burning Hells have long desired to invade the realm of men. To this end, a powerful group
-            of demon lords known as the Lesser Evils exiled their brethren, the Prime Evils, from the Hells and sent
-            them to the human world of Sanctuary.</p>
-          <p>War came with them. The Prime Evils—Diablo, Mephisto, and Baal—began corrupting humans, twisting them into
-            dark servants, and poisoning their minds with false promises of power and wealth. They planned to use these
-            souls in their ongoing battle against the angels of the High Heavens.</p>
-          <p>Brave heroes banded together and managed to slay the Prime Evils, though the demons’ influence left parts
-            of the world scarred and broken. Thousands of people perished, towns were burned to ash, and an entire
-            nation fell to ruin when the Worldstone was destroyed. This ancient relic once kept Sanctuary safe from the
-            armies of demons and angels, but it has been shattered, and its protection is no more.</p>
-        </div>
-        <div>
-          <img src="images/story-so-far-1.png" alt="story-board-1-img" class="storyboard-1-img">
-        </div>
-      </div>
-      <!--Story Board 2-->
-      <div class="story-board-2 d-flex justify-content-center pt-5">
-        <div>
-          <img src="images/story-so-far-2.png" alt="story-board-1-img" class="storyboard-2-img">
-        </div>
-        <div class="storyboard-2">
-          <p>Today, few survivors tell tales of the Prime Evils, and many people on Sanctuary are unaware that the
-            Worldstone ever existed. They remain ignorant of the growing danger that the Worldstone’s absence places
-            them in, content to till their fields and sell their wares in relative peace. But those who saw the Prime
-            Evils’ devastation firsthand remember that two of the Lesser Evils yet live in the Burning Hells…Azmodan,
-            the Lord of Sin, and Belial, the Lord of Lies. These great demons have not forgotten the world of
-            Sanctuary—indeed, they see a chance to seize it for themselves.</p>
-          <p>Now, a star has fallen from the heavens—a grim omen that heralds the End of Days. Sanctuary’s frightened
-            inhabitants are turning to abandoned legends and prophecies for answers. They have no hope against a full
-            onslaught from the Burning Hells. The heroes of the past are gone or dead.</p>
-          <p>A new champion must rise…</p>
-        </div>
-      </div>
-    </article>
-  </section>
-  <!--Footer-->
-  <footer class="footer-content mt-4">
+  <!-- Header Section -->
+<header class="header m-2">
+  <article class="header-conatiner d-flex justify-content-between align-items-center">
+    <a href="../home.html"><img src="images/Diablo3Logo.png" alt="Diablo3Logo" class="h-img1"></a>
+    <h1 class="h-h1 fw-bold fs-1">Story</h1>
+    <a href="../characters/characters.html" style="text-decoration: none;"><p class="h-p1 fs-3">Characters</p></a>
+  </article>
+</header>
+
+<!-- Story Section -->
+<section class="story">
+  <!-- Introduction -->
+  <article class="introductions pt-5 pb-5">
+    <!-- Title and Description of Diablo 3 -->
     <div>
-      <p>Developed by Premjoshua Talluri <i class="fa-regular fa-heart fa-beat"></i></p>
+      <h2>Diablo3</h2>
+      <p>
+        Diablo III is an action role-playing game that takes place throughout the dark fantasy world of Sanctuary.
+        You play a hero who engages in fast-paced combat that tests your reflexes and rewards tactical decisions. As
+        you slay hordes of monsters and challenging bosses, you grow in experience and ability, learning new skills
+        and acquiring items of incredible power.
+      </p>
     </div>
-    <div class="social-media d-flex justify-content-center">
-      <a href="#"><i class="fa-brands fa-facebook m-2"></i></a>
-      <a href="https://www.instagram.com/joshua__prem/"><i class="fa-brands fa-instagram m-2"></i></a>
-      <a href="#"><i class="fa-brands fa-discord m-2"></i></a>
-      <a href="https://github.com/premjoshuatalluri"><i class="fa-brands fa-github m-2"></i></a>
+    <!-- Video Presentation -->
+    <div class="d-flex justify-content-center pt-4">
+      <video controls src="video/what-is-diablo3-en_US.mp4" poster="images/tumbnail.jpeg" class="i-video"></video>
     </div>
-  </footer>
+  </article>
+
+  <!-- Story Boards Section -->
+  <article class="story-boards">
+    <!-- Story Board 1 -->
+    <div class="story-board d-flex justify-content-center">
+      <div class="storyboard-1">
+        <h3>It Begins with....</h3>
+        <p>
+          The demons of the Burning Hells have long desired to invade the realm of men. To this end, a powerful group
+          of demon lords known as the Lesser Evils exiled their brethren, the Prime Evils, from the Hells and sent
+          them to the human world of Sanctuary.
+        </p>
+        <p>
+          War came with them. The Prime Evils—Diablo, Mephisto, and Baal—began corrupting humans, twisting them into
+          dark servants, and poisoning their minds with false promises of power and wealth. They planned to use these
+          souls in their ongoing battle against the angels of the High Heavens.
+        </p>
+        <p>
+          Brave heroes banded together and managed to slay the Prime Evils, though the demons’ influence left parts
+          of the world scarred and broken. Thousands of people perished, towns were burned to ash, and an entire
+          nation fell to ruin when the Worldstone was destroyed. This ancient relic once kept Sanctuary safe from the
+          armies of demons and angels, but it has been shattered, and its protection is no more.
+        </p>
+      </div>
+      <!-- Image for Story Board 1 -->
+      <div>
+        <img src="images/story-so-far-1.png" alt="story-board-1-img" class="storyboard-1-img">
+      </div>
+    </div>
+
+    <!-- Story Board 2 -->
+    <div class="story-board-2 d-flex justify-content-center pt-5">
+      <!-- Image for Story Board 2 -->
+      <div>
+        <img src="images/story-so-far-2.png" alt="story-board-1-img" class="storyboard-2-img">
+      </div>
+      <div class="storyboard-2">
+        <p>
+          Today, few survivors tell tales of the Prime Evils, and many people on Sanctuary are unaware that the
+          Worldstone ever existed. They remain ignorant of the growing danger that the Worldstone’s absence places
+          them in, content to till their fields and sell their wares in relative peace. But those who saw the Prime
+          Evils’ devastation firsthand remember that two of the Lesser Evils yet live in the Burning Hells…Azmodan,
+          the Lord of Sin, and Belial, the Lord of Lies. These great demons have not forgotten the world of
+          Sanctuary—indeed, they see a chance to seize it for themselves.
+        </p>
+        <p>
+          Now, a star has fallen from the heavens—a grim omen that heralds the End of Days. Sanctuary’s frightened
+          inhabitants are turning to abandoned legends and prophecies for answers. They have no hope against a full
+          onslaught from the Burning Hells. The heroes of the past are gone or dead.
+        </p>
+        <p>
+          A new champion must rise…
+        </p>
+      </div>
+    </div>
+  </article>
+</section>
+
+<!-- Footer Section -->
+<footer class="footer-content mt-4">
+  <!-- Footer Text -->
+  <div>
+    <p>Developed by Premjoshua Talluri <i class="fa-regular fa-heart fa-beat"></i></p>
+  </div>
+  <!-- Social Media Links -->
+  <div class="social-media d-flex justify-content-center">
+    <a href="#"><i class="fa-brands fa-facebook m-2"></i></a>
+    <a href="https://www.instagram.com/joshua__prem/"><i class="fa-brands fa-instagram m-2"></i></a>
+    <a href="#"><i class="fa-brands fa-discord m-2"></i></a>
+    <a href="https://github.com/premjoshuatalluri"><i class="fa-brands fa-github m-2"></i></a>
+  </div>
+</footer>
+
 </body>
 
 </html>
