--- a/characters/characters.html
+++ b/characters/characters.html
@@ -31,7 +31,7 @@
   <!-- Character List -->
   <section class="character-board d-flex justify-content-center">
     <article class="characters-list">
-      <!-- Character-1 -->
+      <!-- Character-1 Barbarian -->
       <article class="character-1-container">
         <div class="character-1-info d-flex justify-content-between">
           <div>
@@ -76,7 +76,7 @@
           </div>
         </div>
       </article>
-      <!--Character 2-->
+      <!--Character 2 CRUSADER-->
       <article class="character-1-container">
         <div class="character-1-info d-flex justify-content-between">
           <div class="character-2-stats">
@@ -121,7 +121,7 @@
           </div>
         </div>
       </article>
-      <!-- Character-3 -->
+      <!-- Character-3 DEMON HUNTER-->
       <article class="character-1-container">
         <div class="character-1-info d-flex justify-content-between">
           <div>
@@ -169,7 +169,7 @@
           </div>
         </div>
       </article>
-      <!--Character 4-->
+      <!--Character 4 MONK-->
       <article class="character-1-container">
         <div class="character-1-info d-flex justify-content-between">
           <div class="character-2-stats">
@@ -215,7 +215,7 @@
           </div>
         </div>
       </article>
-      <!-- Character-5 -->
+      <!-- Character-5 NECROMANCER-->
       <article class="character-1-container">
         <div class="character-1-info d-flex justify-content-between">
           <div>
@@ -262,7 +262,7 @@
           </div>
         </div>
       </article>
-      <!--Character 6-->
+      <!--Character 6 WITCH DOCTOR-->
       <article class="character-1-container">
         <div class="character-1-info d-flex justify-content-between">
           <div class="character-2-stats">
@@ -308,7 +308,7 @@
           </div>
         </div>
       </article>
-      <!-- Character-7 -->
+      <!-- Character-7 WIZARD-->
       <article class="character-1-container">
         <div class="character-1-info d-flex justify-content-between">
           <div>
