--- a/gameplay/gameplay.html
+++ b/gameplay/gameplay.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <!--Header-->
+  <!--Header section-->
   <header class="header m-2">
     <article class="header-conatiner d-flex justify-content-between align-items-center">
       <a href="../home.html"><img src="../Images/Diablo3Logo.png" alt="Diablo3Logo" class="h-img1"></a>
@@ -27,7 +27,7 @@
       </a>
     </article>
   </header>
-  <!--Gameplay-->
+  <!--Gameplay section-->
   <section class="gameplay">
     <!--Introduction-->
     <article class="gameplay-1">
@@ -113,6 +113,7 @@
     </article>
     <!--Damage-->
     <article>
+      <!--Damage dealing how the individual get damaged-->
       <div>
         <h1>Dealing Damage</h1>
       </div>
@@ -132,6 +133,7 @@
           <img src="images/sword.png" alt="sword image">
         </div>
       </div>
+      <!--Description on types of damages and how not to get damaged-->
       <div>
         <h2>DAMAGE TYPES</h2>
         <p>An active damage skill always delivers its payload using a single damage type, and many rune variants can
