--- a/home.html
+++ b/home.html
@@ -17,127 +17,142 @@
 </head>
 
 <body>
-  <!--Header-->
-  <header class="d-flex pt-2 pb-1 justify-content-around">
-    <img src="Images/Diablo3Logo.png" alt="" class="logo ">
-    <nav class="navbar  m-3 rounded-2 ">
+ <!-- Header Section -->
+<header class="d-flex pt-2 pb-1 justify-content-around">
+  <img src="Images/Diablo3Logo.png" alt="" class="logo">
+  <nav class="navbar  m-3 rounded-2 ">
       <ul class="navul">
-        <li class="navitem pe-5 ">
-          <a href="#" class="navlink ">Home</a>
-        </li>
-        <li class="navitem pe-5">
-          <a href="../assignment-1-premjoshuatalluri/characters/characters.html" class="navlink ">Characters</a>
-        </li>
-        <li class="navitem pe-5">
-          <a href="../assignment-1-premjoshuatalluri/gameplay/gameplay.html" class="navlink">Gameplay</a>
-        </li>
-        <li class="navitem pe-5">
-          <a href="../assignment-1-premjoshuatalluri/Story/story.html" class="navlink">Story</a>
-        </li>
+          <li class="navitem pe-5">
+              <a href="#" class="navlink">Home</a> <!-- Navigation link to the Home page -->
+          </li>
+          <li class="navitem pe-5">
+              <a href="../assignment-1-premjoshuatalluri/characters/characters.html" class="navlink">Characters</a> <!-- Navigation link to the Characters page -->
+          </li>
+          <li class="navitem pe-5">
+              <a href="../assignment-1-premjoshuatalluri/gameplay/gameplay.html" class="navlink">Gameplay</a> <!-- Navigation link to the Gameplay page -->
+          </li>
+          <li class="navitem pe-5">
+              <a href="../assignment-1-premjoshuatalluri/Story/story.html" class="navlink">Story</a> <!-- Navigation link to the Story page -->
+          </li>
       </ul>
-    </nav>
-  </header>
-  <!--Hero Section-->
-  <section class="Hero-container d-flex flex-column align-items-center justify-content-center">
-    <div class="container-element1">
+  </nav>
+</header>
+
+<!-- Hero Section -->
+<section class="Hero-container d-flex flex-column align-items-center justify-content-center">
+  <div class="container-element1">
       <p class="hero-welcome mb-4 fs-3">
-        Join the Battle Against the Burning Hells
+          Join the Battle Against the Burning Hells <!-- Welcome message for the Hero section -->
       </p>
-    </div>
-    <div class="container-element2">
-      <a href="../assignment-1-premjoshuatalluri/Story/story.html" class="hero-click m-0 p-3 rounded-2">Learn more</a>
-    </div>
-  </section>
-  <!--Motto Section-->
-  <section class="moto-container d-flex justify-content-between">
-    <div class="moto-items p-5 fs-5">
+  </div>
+  <div class="container-element2">
+      <a href="../assignment-1-premjoshuatalluri/Story/story.html" class="hero-click m-0 p-3 rounded-2">Learn more</a> <!-- Call to action button to learn more -->
+  </div>
+</section>
+
+<!-- Motto Section -->
+<section class="moto-container d-flex justify-content-between">
+  <div class="moto-items p-5 fs-5">
       <p class="moto-p1 fs-2 fw-bold">
-        SEASON OF BLOOD IS <br> LIVE <i class="fa-duotone fa-circle-dot fa-fade"></i>
+          SEASON OF BLOOD IS <br> LIVE <i class="fa-duotone fa-circle-dot fa-fade"></i> <!-- Displaying the current season information -->
       </p>
       <p class="moto-p2">
-        Delve into the epic, action-packed adventure where you embody one of seven unique character classes. Your
-        mission? Battle the nefarious Lord of Terror and his relentless minions. Unleash your extraordinary powers,
-        navigate treacherous dungeons, and unearth legendary loot. It's an unending clash of good versus evil.</p>
-    </div>
-    <div class="moto-image p-5 d-flex">
-      <img src="Images/motoimg.png" alt="" class="moto-image1">
-    </div>
-  </section>
-  <!--Features icons-->
-  <section class="icon-container d-flex justify-content-around flex-wrap align-items-center mb-2">
-    <div class="icon-box">
+          Delve into the epic, action-packed adventure where you embody one of seven unique character classes. Your
+          mission? Battle the nefarious Lord of Terror and his relentless minions. Unleash your extraordinary powers,
+          navigate treacherous dungeons, and unearth legendary loot. It's an unending clash of good versus evil. <!-- Description of the game's premise -->
+      </p>
+  </div>
+  <div class="moto-image p-5 d-flex">
+      <img src="Images/motoimg.png" alt="" class="moto-image1"> <!-- Displaying an image in the Motto section -->
+  </div>
+</section>
+
+<!-- Features Icons Section -->
+<section class="icon-container d-flex justify-content-around flex-wrap align-items-center mb-2">
+  <div class="icon-box">
       <a href="../assignment-1-premjoshuatalluri/Story/story.html" class="icon-head">
-        <p>Story</p>
+          <p>Story</p> <!-- Feature icon for the Story section -->
       </a>
-      <a href="../assignment-1-premjoshuatalluri/Story/story.html" class="icon-body">When Heaven Meets Inferno</a>
-    </div>
-    <div class="icon-box">
+      <a href="../assignment-1-premjoshuatalluri/Story/story.html" class="icon-body">When Heaven Meets Inferno</a> <!-- Description of the Story section -->
+  </div>
+  <div class="icon-box">
       <a href="../assignment-1-premjoshuatalluri/characters/characters.html" class="icon-head">
-        <p>Characters</p>
+          <p>Characters</p> <!-- Feature icon for the Characters section -->
       </a>
-      <a href="../assignment-1-premjoshuatalluri/characters/characters.html" class="icon-body">Unearth the Legends of Heroism</a>
-    </div>
-    <div class="icon-box">
+      <a href="../assignment-1-premjoshuatalluri/characters/characters.html" class="icon-body">Unearth the Legends of Heroism</a> <!-- Description of the Characters section -->
+  </div>
+  <div class="icon-box">
       <a href="../assignment-1-premjoshuatalluri/gameplay/gameplay.html" class="icon-head">
-        <p>Gameplay</p>
+          <p>Gameplay</p> <!-- Feature icon for the Gameplay section -->
       </a>
-      <a href="../assignment-1-premjoshuatalluri/gameplay/gameplay.html" class="icon-body">Dive into the Heart of Action</a>
+      <a href="../assignment-1-premjoshuatalluri/gameplay/gameplay.html" class="icon-body">Dive into the Heart of Action</a> <!-- Description of the Gameplay section -->
+  </div>
+</section>
+
+ <!-- Reception Section: This section displays reviews and ratings -->
+<section class="reception-container mt-5">
+  <div>
+    <p class="reception-heading fw-bold fs-3">Reception & Reviews</p>
+  </div>
+  <div class="reception-box-conainer d-flex justify-content-around flex-wrap align-items-center mt-5">
+    <!-- Individual review card for Gamespot -->
+    <div class="card align-items-center"
+      style="width: 18rem;background-color: rgb(148, 148, 148);box-shadow: 9px 8px 20px 1px #000000;">
+      <img src="Logos/gamespot_logo.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Gamespot</h5>
+        <p class="card-text">Diablo III is a devilishly captivating and addictive action role-playing game.</p>
+        <h6>Ratings: 8.5/10</h6>
+      </div>
     </div>
-  </section>
-  <!--Reception-->
-  <section class="reception-container mt-5">
+
+    <!-- Individual review card for PC Gamer (U.K) -->
+    <div class="card" style="width: 18rem;background-color: rgb(148, 148, 148);box-shadow: 9px 8px 20px 1px #000000;">
+      <img src="Logos/PC_Gamer_logo.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">PC Gamer (U.K)</h5>
+        <p class="card-text">It's a phenomenally good game, immediately fun to play and enduringly compulsive.</p>
+        <h6>Ratings: 90/100</h6>
+      </div>
+    </div>
+
+    <!-- Individual review card for G4 -->
+    <div class="card" style="width: 18rem;background-color: rgb(148, 148, 148);box-shadow: 9px 8px 20px 1px #000000;">
+      <img src="Logos/G4_logo.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">G4</h5>
+        <p class="card-text">Delivers an addictive and polished game with diverse gameplay options.</p>
+        <h6>Ratings: 4.5/5</h6>
+      </div>
+    </div>
+
+    <!-- Individual review card for Dr.Disrespect -->
+    <div class="card" style="width: 18rem;background-color: rgb(148, 148, 148);box-shadow: 9px 8px 20px 1px #000000;">
+      <img src="Logos/dr_disrespect.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Dr.Disrespect (The '2' Time)</h5>
+        <p class="card-text">Diablo III is alright!!</p>
+        <h6>Ratings: 6.0/10</h6>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Footer Section: Information about the developer and social media links -->
+<section class="footer-container mt-5 p-3">
+  <footer class="footer-content">
     <div>
-      <p class="reception-heading fw-bold fs-3">Reception & Reviews</p>
+      <p>Developed by Premjoshua Talluri <i class="fa-regular fa-heart fa-beat"></i></p>
     </div>
-    <div class="reception-box-conainer d-flex justify-content-around flex-wrap align-items-center mt-5">
-      <div class="card align-items-center"
-        style="width: 18rem;background-color: rgb(148, 148, 148);box-shadow: 9px 8px 20px 1px #000000;">
-        <img src="Logos/gamespot_logo.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Gamespot</h5>
-          <p class="card-text">Diablo III is a devilishly captivating and addictive action role-playing game.</p>
-          <h6>Rattings: 8.5/10</h6>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem;background-color: rgb(148, 148, 148);box-shadow: 9px 8px 20px 1px #000000;">
-        <img src="Logos/PC_Gamer_logo.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">PC Gamer (U.K)</h5>
-          <p class="card-text"> It's a phenomenally good game, immediately fun to play and enduringly compulsive.</p>
-          <h6>Rattings: 90/100</h6>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem;background-color: rgb(148, 148, 148);box-shadow: 9px 8px 20px 1px #000000;">
-        <img src="Logos/G4_logo.png" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">G4</h5>
-          <p class="card-text">Delivers an addictive and polished game with diverse gameplay options.</p>
-          <h6>Rattings: 4.5/5</h6>
-        </div>
-      </div>
-      <div class="card" style="width: 18rem;background-color: rgb(148, 148, 148);box-shadow: 9px 8px 20px 1px #000000;">
-        <img src="Logos/dr_disrespect.jpeg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Dr.Disrespect(The '2' Time)</h5>
-          <p class="card-text">Diablo III is alright!!</p>
-          <h6>Rattings: 6.0/10</h6>
-        </div>
-      </div>
+    <div class="social-media d-flex justify-content-center">
+      <a href="#"><i class="fa-brands fa-facebook m-2"></i></a>
+      <a href="https://www.instagram.com/joshua__prem/"><i class="fa-brands fa-instagram m-2"></i></a>
+      <a href="#"><i class="fa-brands fa-discord m-2"></i></a>
+      <a href="https://github.com/premjoshuatalluri"><i class="fa-brands fa-github m-2"></i></a>
     </div>
-  </section>
-  <!--Footer-->
-  <section class="footer-container mt-5 p-3">
-    <footer class="footer-content">
-      <div>
-        <p>Developed by Premjoshua Talluri <i class="fa-regular fa-heart fa-beat"></i></p>
-      </div>
-      <div class="social-media d-flex justify-content-center">
-        <a href="#"><i class="fa-brands fa-facebook m-2"></i></a>
-        <a href="https://www.instagram.com/joshua__prem/"><i class="fa-brands fa-instagram m-2"></i></a>
-        <a href="#"><i class="fa-brands fa-discord m-2"></i></a>
-        <a href="https://github.com/premjoshuatalluri"><i class="fa-brands fa-github m-2"></i></a>
-      </div>
-    </footer>
+  </footer>
+</section>
+
   </section>
 </body>
 
